fixed alignment issue landscape

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -803,7 +803,7 @@ li {
     margin-bottom: 2px; }
 
   .playfieldRowHeight {
-    height: 90vh; }
+    height: 87vh; }
 
   .fieldWrapper {
     margin-top: 2px;
@@ -876,7 +876,7 @@ li {
     margin-bottom: 2px; }
 
   .playfieldRowHeight {
-    height: 90vh; }
+    height: 87vh; }
 
   .fieldWrapper {
     margin-top: 2px;
@@ -962,7 +962,7 @@ li {
     margin-bottom: 2px; }
 
   .playfieldRowHeight {
-    height: 90vh; }
+    height: 87vh; }
 
   .fieldWrapper {
     margin-top: 2px;
